<resources>
    <string name="app_name">Мои динозавры</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <!--    Выдвижная панель-->
    <string name="title_panel">Мир динозавров</string>

    <string name="tabs_all">Все динозавры</string>
    <string name="tabs_plant">Растения древности</string>
    <string name="tabs_earth">Доисторическая Земля</string>
    <string name="tabs_records">Рекорды динозавров</string>
    <string name="tabs_finds">Находки архиологов</string>
    <string name="tabs_favor">Любимые динозавры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_description"> Время обитания:\n Величина:\n Вес:\n Открыт:\n Значение:</string>


    <!--    Рекорды динозавров-->

    <string name="records_dino">
        Прочтите, и вы узнаете, какие динозавры и по какой причине могли бы попасть в доисторическую книгу рекордов.
        Некоторыми из этих «рекордов» вы будете очень удивлены.
    </string>

    <string name="first_record">
        ЗУБАСТЫЕ ТВАРИ \n
        У взрослого человека во рту находятся 32 зуба. Позади беззубого клюва утконосого динозавра имеется гораздо
        больше зубов - по 480 в верхней и нижней челюстях.
    </string>

    <string name="second_record">
        САМЫЙ СИЛЬНЫЙ\n
        Анкилозавр , напоминавший телосложением танк и живший в Северной Америке в поздний меловой период,
        был буквально с головы до ног покрыт костяной броней.
    </string>

    <string name="third_record">
        САМЫЙ ТЯЖЕЛЫЙ \n
        По размерам скелетных останков, найденных в штате Колорадо, ученые подсчитали, что при жизни ультразавр, живший в
        Северной Америке в поздний меловой период, мог весить целых 55 тонн, то есть во много раз больше современного слона. Это,
        видимо, был один из самых высоких динозавров, ростом в шесть этажей. Судя по всему, динозавры некоторых видов вырастали большими и
        сильными, не употребляя в пищу мяса.
    </string>

    <!--    Растения, страница -->
    <string name="plant_description">
        Теплый и влажный климат юрского периода способствовал буйному развитию растительного мира планеты.
        Папоротникообразные, хвойные и цикадовые образовывали обширные болотистые леса.
        На побережье произрастали араукарии, туи, цикадовые. Папоротники и хвощи образовывали обширные лесные массивы.
        В начале юрского периода, около 195 млн. л.н. на всей территории северного полушария растительность была довольно однообразной.
        Но уже начиная с средины юрского периода, около 170-165 млн.л.н., образовались два (условных) растительных пояса: северный и южный.
        В северном растительном поясе преобладали гинкговые и травянистые папоротники. В юрский период гинкговые были распространены очень широко.
        Рощи гинкговых деревьев росли по всему поясу.
        В южном растительном поясе преобладали цикадовые и древовидные папоротники.
    </string>

    <string name="papor_description">
        Папоротники юрского периода и в наши дни сохранились в некоторых уголках дикой природы.
        Хвощи и плауны почти не отличались от современных.
        Места произростания папоротников и кордаитов юрского периода сейчас занимают тропические леса, состоящие в основном из сагавников.
        Саговники — класс голосеменных, преобладавший в зеленом покрове Земли юрского периода. Ныне они встречаются кое-где в тропиках и субтропиках.
        Под сенью этих деревьев бродили динозавры.
        Внешне саговники настолько похожи на невысокие (до 10-18 м) пальмы, что даже изначально были определены как пальмы в системе растений.
        В Юрский период так же распространены гинкго — листопадные (что необычно для голосеменных) деревья с кроной, похожей на дуб, и с
        небольшими веерообразными листьями. До наших дней сохранился только один вид — гинкго двулопастной.
        Первые кипарисовые и, возможно, еловые появляются именно в юркий период. Хвойные леса юрского периода были похожи на современные.
    </string>
    <string name="dino_name">Введите динозавра</string>
    <string name="search_dino">Искать</string>


    <!--    Земля, страница -->

    <string name="earth_description">
        Юрский период — один из самых характерных периодов мезозойской эры. Во многих отношениях он отличается от триасового,
        и главное заключается в том, что юра — это время типично морских условий в жизни континентов.
        Отмечаются две морские трансгрессии, которые одновременно охватили почти все континенты.
        Они проявились в конце раннеюрской и начале позднеюрской эпохи и разделялись отчетливой регрессией среднеюрской эпохи.
        Тектоническая жизнь на планете в течение юрского периода была более интенсивной, чем в триасе.
        Для этого периода типичны процессы складко- и горообразования, происходившие в результате столкновения литосферных плит,
        и крупные нарушения глыбового характера в пределах платформ и областей активизации. Образование горстовых поднятий и грабенов
        сопровождалось интенсивным наземным вулканизмом. Древнекиммерийский орогенез затронул отдельные районы Альпийско-Гималайского пояса
        (Пиренеи, Альпы, Карпаты, Крым, Кавказ, Тибет, Индокитай). Орогенические движения происходили в конце средней юры, но особой силы они
        достигли в позднеюрскую эпоху, когда охватили северные районы Тихоокеанской геосинклинального пояса.
    </string>

    <string name="earth1_description">
        В это же время Австралия и Антарктида отделились от Африки и Индии, и возникший новый Индийский океан соединился с восточной окраиной
        океана Тетис. Наиболее обширным в юрском периоде был Тихий океан. Его размеры даже превышали современные. Азия отделилась от Северной
        Америки океаническим бассейном. На западной окраине Северной Америки происходила интенсивная складчатость — так называемый невадийский
        орогенез, который по времени соответствовал позднекиммерийскому. Складкообразование сопровождалось внедрением крупных интрузий и
        высокотемпературным метаморфизмом. Образование невадийского пояса складчатости и батолитов было обусловлено процессом столкновения
        континента с островной дугой. Активная тектоническая жизнь непосредственно оказывала влияние на распределение морских бассейнов и
        рельеф земной поверхности. В начале поздней юры наступила одна из крупнейших мезозойских трансгрессий. В это время морские воды
        проникали по вновь образованным грабенообразным структурам далеко в глубь платформ. Море затопило не только значительную часть
        Евразии, Северной Америки, Южной Америки, но и восточное и западное побережье современной Африки, западное побережье Мадагаскара,
        Индию и Австралию. Однако в результате активизации тектонических движений в конце юрского периода в ряде районов наступила
        регрессия моря. Это обусловило не только обмеление морских бассейнов, но и возникновение обширных лагун и заливов с повышенной
        соленостью воды. Различная интенсивность тектонических движений привела к формированию разнообразных крупных форм рельефа земной поверхности.
        Максимальная глубина вновь образованных океанических бассейнов не превышала нескольких тысяч метров.
        В их пределах выделялись абиссальные и батиальные области, зоны материкового склона и обширные шельфовые участки, постепенно переходящие
        в эпиконтинентальные моря. Максимальная глубина последних составляла 400–500 м. Наиболее сложным и контрастным рельефом обладали области,
        испытавшие киммерийские движения. Для них были характерны неровное дно морских бассейнов, соседство глубоководных впадин с поднятыми
        участками дна и островными дугами, расчлененное побережье и сильно изрезанная береговая линия. Приморские низменности сравнительно быстро
        переходили в возвышенности и горные массивы, которые прорезывались многочисленными реками. Менее контрастный рельеф существовал на платформах.
        Лишь в центральных их частях располагались выровненные возвышенности и холмисто-увалистые равнины сменяющиеся аккумулятивными
        озерно-аллювиальными и озерно-дельтовыми приморскими низменностями.
    </string>


</resources>