<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PlantFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_plant"
                android:textColor="#FFFFFF"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

        </FrameLayout>

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_description" />

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/paporot" />

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/papor_description"
            android:layout_marginBottom="80dp"/>


    </LinearLayout>

</ScrollView>
